# tmux-orche

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.zh.md  SKILL.md  install.md  install.sh  prompt-history.txt  pyproject.toml  test.md
.github/workflows/: ci.yml  publish.yml
docs/: commands.md  config.md
scripts/: build-binary.sh  notify-discord.sh
skills/codex-claude/: SKILL.md
skills/openclaw/: SKILL.md
src/: backend.py  cli.py  json_utils.py  self_update.py  text_utils.py  tls.py  version.py
src/agents/: base.py  claude.py  codex.py  common.py
src/agents/codex/: __init__.py  agent.py  runtime.py  toml_utils.py
src/notify/: __init__.py  config.py  http.py  payload.py  registry.py  service.py  telegram.py  tmux_bridge.py
src/orche/: __init__.py  backend.py  cli.py  notify_hook.py  paths.py
src/orche/notify/: __init__.py  base.py  config.py  discord.py  exceptions.py  http.py  models.py  payload.py  registry.py  service.py
src/runtime/: __init__.py  agent.py  turn.py  watchdog.py
src/session/: __init__.py  config.py  meta.py  mutations.py  ops.py  pane.py  session_state.py  store.py  turn_state.py  types.py
src/tmux/: __init__.py  bridge.py  client.py  query.py
tests/: conftest.py  test_agents.py  test_backend_notify_home.py  test_backend_notify_lock.py  test_backend_session_model.py  test_backend_watchdog.py  test_cli_history_and_config.py  test_e2e_agents.py  test_notify_cli_integration.py  test_notify_config.py  test_notify_discord.py  test_notify_e2e.py  test_notify_http.py  test_notify_payload.py  test_notify_registry.py  test_notify_service.py  test_notify_telegram.py  test_notify_tmux_bridge.py  test_runtime_turn.py  test_runtime_watchdog.py  test_self_update.py  test_session_collaboration_e2e.py  test_session_config.py  test_session_meta_mutations.py  test_tls.py  test_tmux_integration.py
