[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "tmux-orche"
version = "0.1.1"
description = "Typer-based CLI for tmux-backed Codex orchestration sessions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "rich>=13.9.0",
  "typer>=0.16.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
orche = "orche.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/orche"]

[tool.pytest.ini_options]
addopts = "-q --cov=orche.notify --cov-branch --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["orche.notify"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
