[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmux-orche"
dynamic = ["version"]
description = "Typer-based CLI for tmux-backed Codex orchestration sessions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "certifi>=2024.0.0",
  "rich>=13.9.0",
  "typer>=0.16.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
orche = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["backend", "cli", "notify_hook", "paths", "self_update", "tls", "version"]
packages = ["notify", "agents"]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.pytest.ini_options]
addopts = "-q --cov=notify --cov-branch --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["notify"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
