[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmux-orche"
dynamic = ["version"]
description = "Typer-based CLI for tmux-backed Codex orchestration sessions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "certifi>=2024.0.0",
  "rich>=13.9.0",
  "tomli>=2.0; python_version < '3.11'",
  "typer>=0.16.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]
dev = [
  "basedpyright>=1.39.0",
  "pytest>=8.0",
  "ruff>=0.15.0",
  "tomli>=2.0",
]

[project.scripts]
orche = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["backend", "cli", "json_utils", "notify_hook", "paths", "self_update", "tls", "version"]
packages = ["notify", "agents"]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.ruff]
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["F401", "F403"]

[tool.basedpyright]
include = ["src"]
extraPaths = ["src"]
pythonVersion = "3.9"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnsupportedDunderAll = false

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "unit: fast pure-logic regression tests",
  "integration: cross-module or external integration tests",
  "tmux: tests that require a real tmux binary/session",
]
